--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
                                         <img src="./images/image1.jpg" class="card-img-top" alt="...">
                                         <p id="likes">23 Likes</p>
                                         <p class="card-text" id="description">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                        <p id="heart"><i class="far fa-heart"></i><textarea class="rounded" placeholder="Comment" name="comment" id="comment"></textarea></p>
-                                        <p id="menu"><i class="fas fa-ellipsis-v"></i></p>
+                                        <div id="card-footer">
+                                            <i class="far fa-heart"></i> <textarea class="border border-light" placeholder="Comment" name="comment" id="comment"></textarea>
+                                            <i class="fas fa-ellipsis-v"></i>
+                                        </div>
                                     </div>
                                 </div>
                             
@@ -110,8 +112,10 @@
                                     <div class="card-body">
                                         <img src="./images/image2.jpg" class="card-img-top" alt="...">
                                         <p class="card-text" id="description">Lorem ipsum dolor sit amet consectetur adipiscing elit in eros, cursus mauris praesent tortor vivamus aliquet placerat faucibus duis</p>
-                                        <p id="heart"><i class="far fa-heart"></i><textarea class="rounded" placeholder="Comment" name="comment" id="comment"></textarea></p>
-                                        <p id="menu"><i class="fas fa-ellipsis-v"></i></p>
+                                        <div id="card-footer">
+                                            <i class="far fa-heart"></i> <textarea class="border border-light" placeholder="Comment" name="comment" id="comment"></textarea>
+                                            <i class="fas fa-ellipsis-v"></i>
+                                        </div>
                                     </div>
                                 </div>
                             
@@ -125,8 +129,10 @@
                                         <img src="./images/image3.jpg" class="card-img-top" alt="...">
                                         <p>76 Likes</p>
                                         <p class="card-text" id="description">Lorem ipsum dolor sit amet consectetur adipiscing elit in eros, cursus mauris praesent tortor vivamus aliquet placerat faucibus duis, mollis curabitur sapien litora lacinia eleifend elementum tristique.</p>
-                                        <p id="heart"><i class="far fa-heart"></i><textarea class="rounded" placeholder="Comment" name="comment" id="comment"></textarea></p>
-                                        <p id="menu"><i class="fas fa-ellipsis-v"></i></p>
+                                        <div id="card-footer">
+                                            <i class="far fa-heart"></i> <textarea class="border border-light" placeholder="Comment" name="comment" id="comment"></textarea>
+                                            <i class="fas fa-ellipsis-v"></i>
+                                        </div>
                                     </div>
                                 </div>
                             </div> 
